LPS-62729 Fixes the horizontal scroll bar display in the published form view.

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -547,6 +547,16 @@ $horizontal-spacing: 35px;
 	}
 }
 
+.portal-popup {
+	.portlet-layout {
+		margin: 0 0 75px;
+	}
+
+	.portlet-column {
+		padding: 0;
+	}
+}
+
 .portlet-forms {
 	.aspect-ratio img {
 		top: 0;
@@ -740,6 +750,7 @@ $horizontal-spacing: 35px;
 	}
 
 	.form-builder-page-header {
+		padding-right: 34px;
 		position: relative;
 	}
 
